tests/baselines/reference/typingsLookup3.errors.txt
/a.ts(1,23): error TS2688: Cannot find type definition file for 'JqUeRy'.
/a.ts(2,1): error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.


==== /tsconfig.json (0 errors) ====
    { "files": "a.ts" }
    
==== /a.ts (2 errors) ====
    /// <reference types="JqUeRy" />
                          ~~~~~~
!!! error TS2688: Cannot find type definition file for 'JqUeRy'.
    $.x;
    ~
!!! error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.
    
==== /node_modules/@types/jquery/index.d.ts (0 errors) ====
    declare var $: { x: any };
    